--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d076d725330186203489084dfa5800a9"></script>
     <title>탐라, 탐나</title>
   </head>
   <body>
