--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,10 +16,8 @@
       property="og:description"
       content="탐라의 다양한 정보를 탐색하세요!"
     />
-    <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/icon_userprofile.png" />
     <meta property="og:url" content="https://yourwebsite.com" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d076d725330186203489084dfa5800a9&libraries=services"
@@ -28,8 +26,8 @@
   </head>
   <body>
     <noscript
-      >이 웹사이트는 JavaScript를 필요로 합니다. JavaScript를 활성화 후 다시
-      시도해주세요.</noscript
+      >이 웹사이트는 JavaScript가 필요합니다. 브라우저 설정에서 JavaScript를
+      활성화 후 다시 시도해주세요.</noscript
     >
     <div id="root"></div>
   </body>
